--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -25,6 +25,8 @@ $bootstrap-icons-font-src: url("../node_modules/bootstrap-icons/font/fonts/boots
 @import "./sections/footer.scss";
 @import "./sections/soporte.scss";
 @import "./sections/trabaja_con_nosotros.scss";
+@import "./sections/devoluciones.scss";
+@import "./sections/wishlist.scss";
 
 // Components - Kairos
 @import "components/product-card";
