--- a/scss/variables/_colors.scss
+++ b/scss/variables/_colors.scss
@@ -3,6 +3,15 @@
 // 
 
 //- Override and add to color system
+/*
+$primario: #1c0538;
+$secundario: #5e3a8b;
+$resalte: #6f12e0;
+$texto_claro: #fffdfa;
+$texto_oscuro: #0a0f0f;
+$fondo: #0a0f0f;
+*/
+
 $primario: #1c0538;
 $secundario: #5e3a8b;
 $resalte: #6f12e0;
